kubernetes/k3s-01/workloads/romm/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: docker.io/rommapp/romm:5.3.1@sha256:0d66b4ea152a237c7f24b95e87459f46d3c596a7c0b35a82f26bc971487278b3
          startupProbe:
            httpGet:
              path: /api/heartbeat
              port: 8090
            failureThreshold: 5
            periodSeconds: 20
          volumeMounts:
            - name: romm
              mountPath: /romm/assets
              subPath: assets/
            - name: romm
              mountPath: /romm/config
              subPath: config/
            - name: romm
              mountPath: /romm/resources
              subPath: resources/
            - name: romm-roms
              mountPath: /romm/library/roms
      volumes:
        - name: romm
          persistentVolumeClaim:
            claimName: romm
        - name: romm-roms
          persistentVolumeClaim:
            claimName: romm-roms
