kubernetes/k3s-01/workloads/romm/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: romm
  namespace: romm
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: romm
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8090
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: mariadb
        podSelector:
          matchLabels:
            app: mariadb
      ports:
        - protocol: TCP
          port: 3306
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: redis
        podSelector:
          matchLabels:
            app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
